syntax = "proto3";

option go_package = "gokv/proto/commonpb;commonpb";

package commonpb;

message KeyValue {
  string key = 1;
  bytes value = 2;
}

message KeyValueList {
  repeated KeyValue data = 1;
}

message KeyValueMap {
  int64 cursor = 1;
  map<string, KeyValueList> data = 2;
}

message CommandRequest {
  string command = 1;
  string key = 2;
  repeated bytes args = 3;
}

message CommandResponse {
  string error = 1;
  oneof response {
    bytes value = 2;        // For single value responses (e.g., `HGET hash field`)
    bool success = 3;       // For simple ack responses (e.g. `HSET`)
    int64 count = 4;        // For counts (e.g. `HDEL`)
    KeyValueList list = 5;  // For key/value lists (e.g., `HGET hash` or `HGET hash field1 field2` )
    KeyValueMap map = 6;    // For key/value maps (HSCAN)
  }
}
